# thermohi

./: TRY.SWIFT  examples.py  licence  pyproject.toml  readme.md  setup.py
tests/: test_analysis.py
thermohi_hikari/: __init__.py  datalistio.py
thermohi_hikari.egg-info/: PKG-INFO  SOURCES.txt
thermohipy/: __init__.py  datalistio.py  export.py  plotting.py  thermoanalysis.py
thermohipy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
