[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "thermohipy"
version = "0.3.0"
description = "A thermogravimetric analysis helper tool by Hikari."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [{ name = "Hikari Quicklime" }]
requires-python = ">=3.8"